<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp">

    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/please_choose_sort"
        android:textColor="@color/black"
        android:textSize="20sp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <RadioButton
            android:id="@+id/id_dialog_sort_rb_life"
            style="@style/dialog_sort_rb_style"
            android:text="@string/sort_life"/>
        <RadioButton
            android:id="@+id/id_dialog_sort_rb_work"
            style="@style/dialog_sort_rb_style"
            android:text="@string/sort_work"/>
        <RadioButton
            android:id="@+id/id_dialog_sort_rb_memory_day"
            style="@style/dialog_sort_rb_style"
            android:text="@string/sort_memory_day"/>
    </RadioGroup>

    <TextView
        android:id="@+id/id_dialog_sort_tv_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/cancel"
        android:textColor="@color/colorDefault"/>


</LinearLayout>